--- a/mascotas-p2.html
+++ b/mascotas-p2.html
@@ -32,7 +32,7 @@
                             <h1 class="sura-titulo bold text-center">Cotización Seguro Mi Mascota</h1>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-12">
-                             <h1 class="sura-subtitulo text-left">¡Ya tenemos el plan ideal para <strong>[[nombre-mascota]]</strong></h1>
+                             <h1 class="sura-subtitulo text-left">¡Ya tenemos el plan ideal para <strong>[[nombre-mascota]]!</strong></h1>
                         </div>
                     </div>
                     
@@ -40,7 +40,7 @@
                     <div class="row sura-banner-cont banner-background">
                         <div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-4 sura-ofrecimiento">
                             <div class="sura-ofrecimiento-info text-center">
-                                <h2 class="sura-titulo-banner bold">Plan Mascota</h3>
+                                <h2 class="sura-titulo-banner bold">Plan Mi Mascota</h3>
                                 <h3 class="sura-precio-banner bold">$19.990</h1>
                                 <p class="sura-subtitulo-banner bold">UF 00000</p>
                             </div>
@@ -270,7 +270,7 @@
                                     </div>
                                     <div class="col-xs-12 col-sm-4 col-md-4 sura-adicional">
                                         <div class="sura-adicional-info">
-                                            <h2 class="sura-titulo-banner bold">Plan Mi Mascota</h2>
+                                            <h2 class="sura-titulo-banner bold">Pack Adicional</h2>
                                             <h3 class="sura-precio-banner bold">$5.000</h3>
                                             <p class="sura-subtitulo-banner bold">UF 00000</p>
                                             
