--- a/mascotas-p3.html
+++ b/mascotas-p3.html
@@ -45,7 +45,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <h1 class="sura-titulo bold text-center">Contratación Seguro Mi Mascota</h1>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12">
-                        <h1 class="sura-subtitulo text-left">Datos personales del dueño de <strong>[[nombre-mascota]]</strong></h1>
+                        <h1 class="sura-subtitulo text-left">Datos personales del dueño de <br class="mobile"> <strong>[[nombre-mascota]]</strong></h1>
                         <p class="sura-parrafo">*Campos son obligatorios</p>
                     </div>
                 </div>
@@ -58,22 +58,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         		<div class="row form-group">
                         			<div class="col-xs-12 col-sm-12 col-md-3">
                         				<span class="sura-parrafo">RUT *</span>
-                        				<input type="text" class="form-control" placeholder="17000654">
+                        				<input type="text" class="form-control" placeholder="11111111-1">
                         			</div>
                         		</div><!-- .fila 1 -->
 
                         		<div class="row form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Nombres *</span>
-                                        <input type="text" class="form-control" placeholder="Camilo Camilo">
+                                        <input type="text" class="form-control" placeholder="">
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Apellido paterno *</span>
-                                        <input type="text" class="form-control" placeholder="Camilo">
+                                        <input type="text" class="form-control" placeholder="">
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Apellido materno *</span>
-                                        <input type="text" class="form-control" placeholder="Camilo">
+                                        <input type="text" class="form-control" placeholder="">
                                     </div>
                                 </div><!-- .fila 2 -->
 
@@ -87,15 +87,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <div class="row form-group">
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Celular *</span>
-                                        <input type="number" class="form-control" placeholder="984367181">
+                                        <input type="number" class="form-control" placeholder="999999999">
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Email *</span>
-                                        <input type="email" class="form-control" placeholder="guillermo.farias@cardumen.cl">
+                                        <input type="email" class="form-control" placeholder="nombre@correo.cl">
                                     </div>
                                     <div class="col-xs-12 col-sm-12 col-md-3">
                                         <span class="sura-parrafo">Confirmar email *</span>
-                                        <input type="email" class="form-control" placeholder="guillermo.farias@cardumen.cl">
+                                        <input type="email" class="form-control" placeholder="nombre@correo.cl">
                                     </div>
                                 </div><!-- .fila 4 -->
 
@@ -163,20 +163,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <!-- botones -->
               <div class="row sura-margin-row">
                   
-              	<div class="col-xs-12 col-sm-10 col-md-12 text-center hidden-xs">
-                    <div class="alert mg0">
+              	<div class="col-xs-12 col-sm-10 col-md-12 text-center hidden-xs mgt40 mgb80">
+                    <div class="alert mg0 hidden">
                         <div class="alert alert-danger"  style="max-width: 622px; position: relative; left: 150px;" role="alert">
                             <!--span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span-->
                             <span class="sr-only">Error:</span><!-- centrar campos por completar-->
                             <strong>Faltan campos por completar.</strong> Podrás encontrar en rojo los campos que debes corregir.
                         </div>
                     </div>
-              		<a href="" style=" position: relative; left: 80px; " class="btn btn-volver">VOLVER</a>
-              		<button  style=" position: relative; left: 84px; " class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
+              		<a href="" class="btn btn-volver">VOLVER</a>
+              		<button  class="btn btn-continuar" type="submit" onclick="validatepaso2()">CONTINUAR</button>
                     
                   </div>
-                  <div style="left: 40px;" class="col-xs-12 col-sm-2 col-md-2 hidden-xs">
-                        <img src="/img/perro1.gif" class="right">
+                  <div class="col-xs-12 col-sm-12 col-md-12 hidden-xs relative">
+                        <img src="/img/perro1.gif" class="right img-docs">
                   </div>
                 <div  class="visible-xs">
                     <div class="col-xs-12 text-center" >
@@ -204,8 +204,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="row">
                   <div  class="col-xs-12 col-sm-12 col-md-12">
                     <h1 class="sura-titulo bold"><img src="img/icon-warning.png" alt="icono-atencion" class="warning-icon">Lo sentimos,</h1>
-                    <p class="sura-parrafo bold">Por ahora no tenemos un producto diseñado para tu </br>
-                    necesidad.</p>
+                    <p class="sura-parrafo bold">Por ahora no tenemos un producto diseñado para tu <br> necesidad.</p>
                   </div>
                   <div   class="col-xs-12 col-sm-12 col-md-12 text-center">
                     <a href="" class="btn btn-volver" data-dismiss="modal">CERRAR</a>
