--- a/mascotas-p4.html
+++ b/mascotas-p4.html
@@ -41,7 +41,7 @@
                 <!-- declaración -->
                 <div class="row paso4">
                 	<div class="col-xs-12 col-sm-12 col-sm-10">
-                        <p class="sura-parrafo mt20">Declaro que mi mascota no tiene ningún defecto físico o enfermedad * <img src="img/icon-tooltip.png" alt="informacion" class="inline i-sura" data-toggle="tooltip" data-placement="right" title=""></p>
+                        <p class="sura-parrafo mt20">Declaro que mi mascota no tiene ningún defecto físico o enfermedad * <img src="img/icon-tooltip.png" alt="informacion" class="inline i-sura" data-toggle="tooltip" data-placement="right" title="sdgdfgf"></p>
                         <div class="radio-buttons sex-buttons mt10">
                             <input type="radio" id="si-cumplo" name="cumplir" value="si-cumplo"/>
                             <label for="si-cumplo"><span></span>Sí</label>
@@ -67,10 +67,9 @@
                   
               	<div style="position: relative; top: -100px;" class="col-xs-12 col-sm-10 col-md-10 text-center hidden-xs">
                         <div style="max-width: 620px; position: relative; left: 100px;" class="alert">
-                                <div class="alert alert-danger" role="alert">
+                                <div class="alert alert-danger hidden" role="alert">
                                  
-                                  <span class="sr-only">Error:</span>
-                                  Complete todos los campos requeridos
+                                    <strong>Faltan campos por completar.</strong> Podrás encontrar en rojo los campos que debes corregir.
                                 </div>
                             </div>
               		<a href="" style="position: relative; left: 20px;"  class="btn btn-volver">VOLVER</a>
@@ -86,7 +85,7 @@
                         <img src="img/perro2.gif">
                     </div>
                     <div class="col-xs-12 text-center" >
-                        <a style="position: relative; left: 300px;" href="" class="btn btn-volver">VOLVER</a>
+                        <a style="" href="" class="btn btn-volver">VOLVER</a>
                     </div>
                     <div class="col-xs-12 text-center" >
                         <button class="btn sura-boton-contratar" type="submit" onclick="validatepaso3()">CONTRATAR</button>
