--- a/mascotas-error.html
+++ b/mascotas-error.html
@@ -22,8 +22,8 @@
     </header>
     <div class="fondo-error">
         <div class="heading-error">
-           <h1 class="text-center text-white">¡Lo sentimos!</h1>
-           <h1 class="text-center text-white">Ha ocurrido un error con el proceso de pago.</h1>  
+           <h3 class="text-heading-3 text-center text-white">¡Lo sentimos!</h3>
+           <h3 class="text-heading-3 text-center text-white">Ha ocurrido un error con el proceso de pago.</h3>  
         </div>
    </div>
     <img  class="grafica-error img-responsive" src="img/grafica-error.png">
