--- a/mascotas-error.html
+++ b/mascotas-error.html
@@ -38,7 +38,7 @@
         <button class="btn-error" >Volver a Intentar</button>
         </div>
     </div>
-    <footer class="footer-exito ">
+    <footer >
     </footer>
 </body>
 </html>
