--- a/mascotas-p2.html
+++ b/mascotas-p2.html
@@ -314,10 +314,12 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.rut.js"></script>
+<script src="js/slick.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="js/scripts.js"></script>
 
 <script>
+$(document).ready(function(){
     $('.items-mobile').slick({
         dots: true,
         //mobileFirst:true,
@@ -326,6 +328,7 @@
         centerPadding: '10px',
         slidesToShow: 1
 	});
+});
 </script>
 
 </body>
