--- a/mascotas-p3.html
+++ b/mascotas-p3.html
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-12 hidden-xs relative">
-                        <img src="/img/perro1.gif" class="right img-docs">
+                        <img src="img/perro1.gif" class="right img-docs">
                   </div>
                 <div  class="visible-xs">
                     <div class="col-xs-12 text-center" >
