--- a/mascotas-p5.html
+++ b/mascotas-p5.html
@@ -107,9 +107,9 @@
                 <div class="row text-center buttons-container text-center">
                         <div class="col-xs-12 col-sm-12 col-md-12">
                         <a style=" margin-bottom: 20px;" href="Paso-10-exito.html">
-                            <button  style="margin-bottom: 10px; background-color: C3CAD6;" class=" btn btn-accion mb10"  id="confirm-contract" type="button">CONFIRMAR</button>
+                            <button  style="margin-bottom: 10px; background-color: C3CAD6;" class=" btn btn-accion mb10 "  id="confirm-contract" type="button">CONFIRMAR</button>
                         </a>
-                        <a  href="Paso1.html" class="otros-datos-a"><p class="txt-14 margin-top-10">Cotizar con otros datos</p></a>
+                        <a href="Paso1.html" class="otros-datos-a"><p class="txt-14 margin-top-10 ">Cotizar con otros datos</p></a>
                         </div>
                     </div>
                     <!-- botones -->
@@ -170,7 +170,7 @@
     </div>
 
 
-    <footer></footer>
+    <footer style=" margin-top: 80px;"></footer>
 
 
 <script src="js/jquery-3.2.1.min.js"></script>
