--- a/perfil-mascota.html
+++ b/perfil-mascota.html
@@ -46,8 +46,8 @@
                                         <div class="col-md-12 pdt20">
                                             <img src="img/foto-placeholder-mascota.png" class="img-other" alt="">                                            
                                         </div>
-                                        <div class="col-md-12">
-                                            <button class="btn btn-lg  btn-perfil-subir">SUBIR</button>
+                                        <div class="col-md-12 ">
+                                            <button  id="subir-button" class="btn btn-lg  btn-perfil-subir">SUBIR</button>
                                         </div>
                                         <div class="col-md-12">
                                             <p class="mg20 text-center txt12 txtGrey">Subir formatos JPG <br /> o PNG, peso máximo debe <br />ser de XXXX.</p>
@@ -91,7 +91,7 @@
                     </div>
                     
                 </div>
-                <footer class="footer-exito"></footer>  
+                <footer  class="footer-perfil footer-exito"></footer>  
             </div>
             
 
@@ -108,7 +108,7 @@
             <script src="js/validate.js"></script>
             <script src="js/scripts.js"></script>
 
-            <!--script type="text/javascript">
+            <script type="text/javascript">
             $(document).ready(function(){
                 $('.one-time').slick({
                     dots: true,
